impl validations
